<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:background="@color/grey_10"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutUs"
        android:background="@color/grey_10"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="Our Values"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
       />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20px">

                    <ImageView
                        android:id="@+id/integrity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        app:srcCompat="@drawable/integrity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="Integrity"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="#000"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:layout_margin="20px"
        android:text="@string/integ"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey_40"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20px"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        android:id="@+id/commitment"
                        app:srcCompat="@drawable/commitment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="Commitment"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="#000"
                        />



                </LinearLayout>

            </LinearLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:layout_margin="20px"
        android:layout_gravity="center"
        android:text="@string/commit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey_40"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20px"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        android:id="@+id/passion"
                        app:srcCompat="@drawable/passion" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="Passion"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="#000"
                        />



                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:layout_margin="20px"
        android:layout_gravity="center"
        android:text="@string/pass"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey_40"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20px"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        android:id="@+id/learning"
                        app:srcCompat="@drawable/learning" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="Learning"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="#000"
                        />



                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:layout_margin="20px"
        android:text="@string/learn"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey_40"
        android:layout_gravity="center"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20px"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        android:id="@+id/teamwork"
                        app:srcCompat="@drawable/teamwork" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="Team-work"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="#000"
                        />



                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:layout_margin="20px"
        android:text="@string/team"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey_40"
        />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginRight="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="20px"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="Contact Us"
                            android:textStyle="bold"
                            android:layout_marginBottom="20dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="#000"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="42dp"
                            android:maxHeight="42dp"
                            android:scaleType="fitCenter"
                            android:layout_marginLeft="3dp"
                            android:id="@+id/gmail"
                            app:srcCompat="@drawable/gmail" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="descalsota.j.bscs@gmail.com"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="#000"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="42dp"
                            android:maxHeight="42dp"
                            android:scaleType="fitCenter"
                            android:layout_marginLeft="3dp"
                            android:id="@+id/yahoo"
                            app:srcCompat="@drawable/yahoo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="dsclstjms08@yahoo.com"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="#000"
                            />



                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>

</ScrollView>